ext3grep-0.5.0

	Set the correct modification time on files.
	Add extended directory blocks in the order parent -> child, so that it does not happen
	  anymore that some extended directory blocks couldn't be added because their parent
	  directory wasn't added yet.
        Force recompile if CXXFLAGS changes.
	Don't print any non-ASCII characters.
	Treat any non-ASCII character as 'weird' in filenames, thus also values larger than 127.
	Use unsigned long for bitmap_t instead of uint64_t.
	Added README.globals with a description of the used global variables.
	Added README.actions with a description of the used action functions.
	Allow locate database include files without first listing the parent directory.
	Handle orphaned inodes correctly.
	Fixed the reported segfault with backtrace:
	  #0  0x0000000000419084 in Inode::dtime (this=0x0) at ./ext3.h:118
	  #1  0x000000000041168b in filter_dir_entry (...
	Do not include asm/byteorder.h anymore, which appears to be a private header.

ext3grep-0.4.1

	Fix compile problem with EXTERNAL_BLOCK=0

ext3grep-0.4.0

	Address the problem where two dir entries have the same name but different inode numbers.
	Print version as first output line.
	Print more human readable errors if opening of device fails.
	If configure with libcwd, add --debug and --debug-malloc commandline options.
	Asserts now print a backtrace.
	Use EXT3_ROOT_INO instead of 2.
	Make --enable-debug the default.
        Demand --enable-maintainer-mode to be used with svn.
	Append '# END' to the end of the stage1/2 files, and test for it when reading it;
	  regenerate the cache file if it doesn't end on '# END'.

ext3grep-0.3.1

        Accept weird characters in filenames (almost always).
	Added code to warn about rejected filenames because of it's characters
	  (although that is hardly used now we that accept everything).
	Added code that collects statistics about the number
	  of weird characters in a directory (not used yet).

ext3grep-0.3.0
